# NCAR-GLOW

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  MANIFEST.in  Monoenergetic.py  NoPrecipitation.py  NoSourceTest.py  PlotFuncs.py  README.md  Simple.py  azure-pipelines.yaml  cglow.f90  fsutils.f90  glowdriver.f90  glowpython.F90  glowpython.f90  iri90.f  meson.build  meson_options.txt  mzgrid.f90  nrlmsise00.f  output.f90  pyproject.toml  pytest.ini  readtgcm.f90  setup.cfg  setup.py  ssflux.f90  utils.f90
+ncarglow/: Monoenergetic.m  Simple.m  TestGlow.m  glow.m  glowenergy.m  loggrid.m  monoenergetic_flux.m  plotglow.m
+ncarglow/private/: build.m  cmake.m  dt2utsec.m  exepath.m  glowparse.m  meson.m  runcmd.m
.github/workflows/: ci.yml  ci_linux.yml  ci_macos.yml  ci_windows.yml
Examples/: Maxwellian.m  Maxwellian.py  Monoenergetic.m  Monoenergetic.py  NoPrecipitation.py  NoSourceTest.py
Notebooks/: Maxwellian.ipynb
archive/: Makefile.glowbasic  Makefile.glowbasic.gfort  Makefile.glowdriver  PlotFuncs.py
cmake/: compilers.cmake
cmake/Modules/: FindNetCDF.cmake  FindOctave.cmake
fortran/: in.namelist.msis
glow/: __init__.py
matlab/: EnergyGrid.m  RunGlow.m  Simple.m  build.m  date2doy.m  datenum2utsec.m  exepath.m  glow.m  glowdate.m  glowenergy.m  glowparse.m  glowpath.m  interactive.m  isoctave.m  loggrid.m  monoenergetic.m  monoenergetic_flux.m  plotglow.m  setup.m  setup_cmake.m  setup_glow.m  setup_glow_cmake.m  setup_glow_meson.m  setup_meson.m
ncarglow/: __init__.py  base.py  build.py  plots.py
src/: CMakeLists.txt  cglow.f90  fsutils.f90  gchem.f90  glowdriver.f90  glowpython.f90  iri90.f  meson.build  mzgrid.f90  utils.f90
src/ncarglow/: CMakeLists.txt  __init__.py  base.py  build.py  meson.build  plots.py
src/ncarglow/cmake/: compilers.cmake
src/ncarglow/cmake/Modules/: FindNetCDF.cmake  FindOctave.cmake
src/ncarglow/fortran/: CMakeLists.txt  fsutils.f90  glowpython.f90  meson.build  ssflux.f90  tzgrid.f90  utils.f90
src/ncarglow/tests/: test_basic.py  test_build.py
tests/: test_basic.py  test_basic.py.orig  test_build.py  test_build.py.orig  test_matlab.py  test_matlab.py.orig  test_mod.m  test_mod.m.orig
