[metadata]
name = ncarglow
version = 1.1.1
author = Michael Hirsch, Ph.D.
description = NCAR GLOW model
url = https://github.com/scivision/ncar-glow
keywords =
  thermosphere
  ionosphere
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  numpy >= 1.10
  xarray
  geomagindices

[options.extras_require]
tests =
  pytest >= 3.9
cov =
  pytest-cov
  coveralls
  flake8
  mypy
plot =
  matplotlib
  seaborn


[options.entry_points]
console_scripts =
